Centralized redirects and added dark mode preference.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 
+@media (prefers-color-scheme: dark) {
+   body {
+      background: black;
+      color: white;
+   }
+}
+
 body {
    margin: 0;
-   background: black;
-   color: white;
 }
 
 .page-title {
